--- a/example/_includes/layout.html
+++ b/example/_includes/layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{ post.data.title }}</title>
+    <title>Org notes - {{ title }}</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   </head>
   <body>
@@ -12,19 +12,14 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a class="current" href="/posts">Posts</a></li>
-
+          <li><a href="/posts">Posts</a></li>
+          <li><a href="/tags">Tags</a></li>
+        </ul>
       </nav>
     </header>
 
     <main>
-      <h1>All posts</h1>
-
-      <ul>
-        {% for post in collections.org %}
-          <li><a href="{{post.data.slug}}">{{ post.data.title }}</a> <time datetime="{{post.data.date}}">{{post.data.date}}</time></li>
-        {% endfor %}
-      </ul>
+      {{ content }}
     </main>
 
     <footer>
